--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
     "zod": "^3.24.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.0",
+    "@biomejs/biome": "^2.3.14",
+    "@biomejs/cli-darwin-arm64": "2.3.14",
+    "@biomejs/cli-darwin-x64": "2.3.14",
+    "@biomejs/cli-linux-arm64": "2.3.14",
+    "@biomejs/cli-linux-x64": "2.3.14",
     "@types/bun": "^1.2.0",
     "typescript": "^5.7.0"
   },
